--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,4 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-
-<p appHighlight >
-  Highlight me!
-</p>
-
-<div>
-  {{notCapitalString | capitalize}}
+<app-nav-component></app-nav-component>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
