--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -1,3 +1,65 @@
-<p>
-  register works!
-</p>
+<h1>Registration Form</h1>
+<form #registerForm="ngForm" >
+  <div class="form-group" (ngSubmit)="onSubmit()">
+    <label for="username">Username</label>
+    <input type="text"
+    class="form-control" id="username"
+    name="username"
+    [(ngModel)]="model.username"
+    #username="ngModel"
+    required>
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control"
+    name="password" 
+    [(ngModel)]="model.password" 
+    #password="ngModel"
+    required>
+  </div>
+  <div class="form-group">
+    <label for="confirmPassword">Confirm Password</label>
+    <input type="password"  class="form-control"
+    name="confirmPassword" 
+    [(ngModel)]="model.confirmPassword"
+    #confirmPassword="ngModel"
+    required>
+  </div>
+  <div class="form-group">
+    <label for="firstName">First Name</label>
+    <input type="text"  class="form-control" 
+    name="firstName"
+    [(ngModel)]="model.firstName" 
+    #firstName="ngModel"
+    required>
+  </div>
+  <div class="form-group">
+    <label for="lastName">Last Name</label>
+    <input type="text"  class="form-control"
+     name="lastName"
+     [(ngModel)]="model.lastName"
+     #lastName="ngModel"
+    required>
+  </div>
+  <div class="form-group">
+    <label for="email">Email Address</label>
+    <input type="text"       class="form-control"
+    name="email"
+    [(ngModel)]="model.email" 
+     #email="ngModel"
+    required>
+  </div>
+  <div class="form-group">
+    <label for="model.age">Age</label>
+    <input type="number" class="form-control"
+    name="age"
+    [(ngModel)]="model.age" 
+    #age="ngModel"
+    >
+  </div>
+
+  <button type="submit" class="btn btn-success"
+  [disabled]="!registerForm.form.valid">
+    Register
+  </button>
+</form>
