--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -1,13 +1,17 @@
 <h1>Registration Form</h1>
-<form #registerForm="ngForm" >
-  <div class="form-group" (ngSubmit)="onSubmit()">
+<!-- {{ diagnostics }} -->
+<form #registerForm="ngForm" (ngSubmit)="register()" >
+  <div class="form-group">
     <label for="username">Username</label>
     <input type="text"
     class="form-control" id="username"
     name="username"
-    [(ngModel)]="model.username"
-    #username="ngModel"
-    required>
+    [(ngModel)]="model.username" pattern="^[A-Z][A-Za-z*\d]+$"
+    #username="ngModel" required>
+    <div class="alert alert-danger" [hidden]="username.valid || username.pristine"
+    >
+      Username must start with capital letter and contain only letters
+    </div>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
@@ -15,51 +19,82 @@
     name="password" 
     [(ngModel)]="model.password" 
     #password="ngModel"
-    required>
+    required minlength="6">
+    <div class="alert alert-danger" [hidden]="password.valid || password.pristine"
+    >
+      Password must be at least 6 characters.
+    </div>
   </div>
   <div class="form-group">
     <label for="confirmPassword">Confirm Password</label>
-    <input type="password"  class="form-control"
+    <input type="password" class="form-control"
     name="confirmPassword" 
     [(ngModel)]="model.confirmPassword"
     #confirmPassword="ngModel"
     required>
+    <div class="alert alert-danger" 
+    [hidden]="confirmPassword.value === password.value || confirmPassword.pristine"
+    >
+      Both passwords must match
+    </div>
   </div>
   <div class="form-group">
     <label for="firstName">First Name</label>
-    <input type="text"  class="form-control" 
-    name="firstName"
+    <input type="text" class="form-control" 
+    name="firstName" pattern="^[A-Z][a-z]+$"
     [(ngModel)]="model.firstName" 
     #firstName="ngModel"
     required>
+    <div class="alert alert-danger" 
+    [hidden]="firstName.pristine || firstName.valid"
+    >
+      First Name is required and must start with capital letter
+    </div>
   </div>
   <div class="form-group">
     <label for="lastName">Last Name</label>
-    <input type="text"  class="form-control"
-     name="lastName"
+    <input type="text" class="form-control"
+     name="lastName" pattern="^[A-Z][a-z]+$"
      [(ngModel)]="model.lastName"
      #lastName="ngModel"
     required>
+    <div class="alert alert-danger" 
+    [hidden]="lastName.pristine || lastName.valid"
+    >
+      Last Name is required and must start with capital letter
+    </div>
   </div>
   <div class="form-group">
     <label for="email">Email Address</label>
-    <input type="text"       class="form-control"
+    <input type="text" class="form-control"
     name="email"
     [(ngModel)]="model.email" 
-     #email="ngModel"
+     #email="ngModel" 
+     pattern="[a-z0-9!#$%&'*+\/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+\/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
     required>
+    <div class="alert alert-danger" 
+    [hidden]="email.pristine || email.valid"
+    >
+      Email is required and should be valid
+    </div>
   </div>
   <div class="form-group">
     <label for="model.age">Age</label>
     <input type="number" class="form-control"
-    name="age"
+    name="age" pattern="^[1-9][0-9]?$|^100$"
     [(ngModel)]="model.age" 
     #age="ngModel"
     >
+    <div class="alert alert-danger" 
+    [hidden]="age.pristine || age.valid"
+    >
+      Age should be valid age between 1 and 100
+    </div>
   </div>
 
   <button type="submit" class="btn btn-success"
-  [disabled]="!registerForm.form.valid">
+  [disabled]="!registerForm.form.valid"
+  >
     Register
   </button>
 </form>
