Login form working

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,6 +1,10 @@
 
 <h1>Login Form</h1>
-<form #loginForm="ngForm">
+<div *ngIf="loginFailed" class="alert alert-danger">
+    <span *ngIf="err.status === 401">Invalid username or password</span>
+    <span *ngIf="err.status !== 401">Error: {{err.message}}</span>
+</div>
+<form #loginForm="ngForm" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="username">Username</label>
     <input type="text"  name="username"
@@ -30,7 +34,7 @@
     [disabled]="loginForm.invalid"
   >
   Login
-</button>
+  </button>
 </form>
 
   
