--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -9,17 +9,17 @@
       <li class="nav-item active">
         <a class="nav-link"[routerLink]="['/home']" >Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/login']" >Login</a>
+      <li class="nav-item" *ngIf="!username" >
+        <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item"  *ngIf="!username">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="logout()" >Logout</a>
+        <a class="nav-link" (click)="logout()" *ngIf="username" >Logout</a>
       </li>
       <li class="nav-item pull" *ngIf="username">
-          <a class="nav-link" id="notclick" >{{username}}</a>
+          <a class="nav-link" id="notclick" >Welcome, {{username}}!</a>
       </li>
     </ul>
   </div>
