--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -1,9 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >Vacation App</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >
+    <img src="assets/travelBig.png"class="img img-responsive logo"  />
+    <span>Vacation App</span>
+  </a>
+  <button class="navbar-toggler" type="button" 
+  data-toggle="collapse" data-target="#navbarColor01"
+   aria-controls="navbarColor01" aria-expanded="false"
+    aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
