--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 <div class="main" *ngIf="user">
   <div class="row">
     <div class="col-md-6">
-      <h3>Your vacation days left are: {{user.daysLeft}}</h3>
+      <h3>Your left vacation days are: {{user.daysLeft}}</h3>
       <hr>
       <h4>Request a new vacation</h4>
     </div>
@@ -39,11 +39,7 @@
       </button>
     </div>
   </form>
-  <div *ngIf="vacationsArray" class="vacations">
-    <h2>Taken Vacations</h2>
-      <li *ngFor="let vacation of vacationsArray">
-         Start Date:  {{ vacation.startDate | date }} - EndDate:  {{ vacation.endDate | date }} - Days:  {{ vacation.daysTaken }}
-        </li>
-  </div>
+
+  <app-vacations [refreshVacations]="refreshTrigger"></app-vacations>
  
 </div>
