--- a/src/app/vacations/vacations.component.html
+++ b/src/app/vacations/vacations.component.html
@@ -1,10 +1,78 @@
-<div *ngIf="vacationsArray" class="vacations">
-  <h2>Previous Vacations</h2>
-  <li *ngFor="let vacation of previousVacations">
-      Start Date:  {{ vacation.startDate | date }} - EndDate:  {{ vacation.endDate | date }} - Days:  {{ vacation.daysTaken }}
-  </li>
+<div *ngIf="dataSource1" class="vacations">
+    <h2>Previous Vacations</h2>
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+    
+    <table mat-table [dataSource]="dataSource1" class="vacationsTable">
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+      <!-- StartDate Column -->
+      <ng-container matColumnDef="startDate">
+        <th mat-header-cell *matHeaderCellDef> Start Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.startDate | date:'dd.MM.yyyy'}} </td>
+      </ng-container>
+    
+      <!-- EndDate Column -->
+      <ng-container matColumnDef="endDate">
+        <th mat-header-cell *matHeaderCellDef> End Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.endDate |  date:'dd.MM.yyyy'}} </td>
+      </ng-container>
+    
+      <!-- DaysTaken Column -->
+       <ng-container matColumnDef="daysTaken">
+        <th mat-header-cell *matHeaderCellDef> Days </th>
+        <td mat-cell *matCellDef="let element"> {{element.daysTaken}} </td>
+       </ng-container>
+    
+      <!-- IsApproved Column -->
+      <ng-container matColumnDef="isApproved">
+        <th mat-header-cell *matHeaderCellDef> Approved </th>
+        <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
+      </ng-container> 
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    
+  </div>
+
+<div *ngIf="dataSource">
   <h2>Next Vacations</h2>
-  <li *ngFor="let vacation of nextVacations">
-     Start Date:  {{ vacation.startDate | date }} - EndDate:  {{ vacation.endDate | date }} - Days:  {{ vacation.daysTaken }}
-  </li>
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+  
+  <table mat-table [dataSource]="dataSource" class="vacationsTable">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- StartDate Column -->
+    <ng-container matColumnDef="startDate">
+      <th mat-header-cell *matHeaderCellDef> Start Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.startDate | date:'dd.MM.yyyy'}} </td>
+    </ng-container>
+  
+    <!-- EndDate Column -->
+    <ng-container matColumnDef="endDate">
+      <th mat-header-cell *matHeaderCellDef> End Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.endDate |  date:'dd.MM.yyyy'}} </td>
+    </ng-container>
+  
+    <!-- DaysTaken Column -->
+     <ng-container matColumnDef="daysTaken">
+      <th mat-header-cell *matHeaderCellDef> Days </th>
+      <td mat-cell *matCellDef="let element"> {{element.daysTaken}} </td>
+     </ng-container>
+  
+    <!-- IsApproved Column -->
+    <ng-container matColumnDef="isApproved">
+      <th mat-header-cell *matHeaderCellDef> Approved </th>
+      <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
+    </ng-container> 
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
