--- a/src/app/vacations/vacations.component.html
+++ b/src/app/vacations/vacations.component.html
@@ -1,47 +1,52 @@
 <div *ngIf="dataSource1" class="vacations">
-    <h2>Previous Vacations</h2>
-    <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-    </mat-form-field>
+  <h2>Previous Vacations</h2>
+  <mat-form-field>
+    <input matInput name="search1" (keyup)="applyFilter($event.target.value, 'dataSource1')" placeholder="Filter">
+  </mat-form-field>
     
-    <table mat-table [dataSource]="dataSource1" class="vacationsTable">
-      <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-    
-      <!-- StartDate Column -->
-      <ng-container matColumnDef="startDate">
-        <th mat-header-cell *matHeaderCellDef> Start Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.startDate | date:'dd.MM.yyyy'}} </td>
+  <table mat-table [dataSource]="dataSource1" class="vacationsTable">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- StartDate Column -->
+    <ng-container matColumnDef="startDate">
+      <th mat-header-cell *matHeaderCellDef> Start Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+    </ng-container>
+  
+    <!-- EndDate Column -->
+    <ng-container matColumnDef="endDate">
+      <th mat-header-cell *matHeaderCellDef> End Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+    </ng-container>
+  
+    <!-- DaysTaken Column -->
+      <ng-container matColumnDef="daysTaken">
+      <th mat-header-cell *matHeaderCellDef> Days </th>
+      <td mat-cell *matCellDef="let element"> {{element.daysTaken}} </td>
       </ng-container>
-    
-      <!-- EndDate Column -->
-      <ng-container matColumnDef="endDate">
-        <th mat-header-cell *matHeaderCellDef> End Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.endDate |  date:'dd.MM.yyyy'}} </td>
-      </ng-container>
-    
-      <!-- DaysTaken Column -->
-       <ng-container matColumnDef="daysTaken">
-        <th mat-header-cell *matHeaderCellDef> Days </th>
-        <td mat-cell *matCellDef="let element"> {{element.daysTaken}} </td>
-       </ng-container>
-    
-      <!-- IsApproved Column -->
-      <ng-container matColumnDef="isApproved">
-        <th mat-header-cell *matHeaderCellDef> Approved </th>
-        <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
-      </ng-container> 
-    
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    
-  </div>
+  
+    <!-- IsApproved Column -->
+    <ng-container matColumnDef="isApproved">
+      <th mat-header-cell *matHeaderCellDef> Approved </th>
+      <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
+    </ng-container> 
+
+    <!-- Reason Column -->
+    <ng-container matColumnDef="reason">
+      <th mat-header-cell *matHeaderCellDef> Reason </th>
+      <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
+    </ng-container> 
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</div>
 
 <div *ngIf="dataSource">
   <h2>Next Vacations</h2>
   <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    <input matInput name="search2" (keyup)="applyFilter($event.target.value, 'dataSource')" placeholder="Filter">
   </mat-form-field>
   
   <table mat-table [dataSource]="dataSource" class="vacationsTable">
@@ -51,13 +56,13 @@
     <!-- StartDate Column -->
     <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef> Start Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.startDate | date:'dd.MM.yyyy'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
     </ng-container>
   
     <!-- EndDate Column -->
     <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.endDate |  date:'dd.MM.yyyy'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
     </ng-container>
   
     <!-- DaysTaken Column -->
@@ -70,6 +75,12 @@
     <ng-container matColumnDef="isApproved">
       <th mat-header-cell *matHeaderCellDef> Approved </th>
       <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
+    </ng-container> 
+
+     <!-- Reason Column -->
+     <ng-container matColumnDef="reason">
+      <th mat-header-cell *matHeaderCellDef> Reason </th>
+      <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
     </ng-container> 
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
