--- a/src/app/vacations/vacations.component.html
+++ b/src/app/vacations/vacations.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="dataSource1" class="vacations">
-  <h2>Previous Vacations</h2>
+  <h2>Next Vacations</h2>
   <mat-form-field>
     <input matInput name="search1" (keyup)="applyFilter($event.target.value, 'dataSource1')" placeholder="Filter">
   </mat-form-field>
@@ -37,6 +37,18 @@
       <th mat-header-cell *matHeaderCellDef> Reason </th>
       <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
     </ng-container> 
+
+    <ng-container  matColumnDef="cancellation">
+      <th mat-header-cell *matHeaderCellDef> Cancellation </th>
+      <td mat-cell *matCellDef="let element">
+        <ng-container *ngIf="!element.isCancelled">
+          <button mat-raised-button (click)="openDialog()">Cancel Vacation</button>
+        </ng-container>
+        <span *ngIf="element.isCancelled">
+        Cancelled!
+        </span> 
+    </td>
+    </ng-container> 
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -44,46 +56,40 @@
 </div>
 
 <div *ngIf="dataSource">
-  <h2>Next Vacations</h2>
+  <h2>Previous Vacations</h2>
   <mat-form-field>
     <input matInput name="search2" (keyup)="applyFilter($event.target.value, 'dataSource')" placeholder="Filter">
   </mat-form-field>
   
   <table mat-table [dataSource]="dataSource" class="vacationsTable">
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
   
-    <!-- StartDate Column -->
-    <ng-container matColumnDef="startDate">
+     <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef> Start Date </th>
       <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
     </ng-container>
   
-    <!-- EndDate Column -->
     <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef> End Date </th>
       <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
     </ng-container>
   
-    <!-- DaysTaken Column -->
      <ng-container matColumnDef="daysTaken">
       <th mat-header-cell *matHeaderCellDef> Days </th>
       <td mat-cell *matCellDef="let element"> {{element.daysTaken}} </td>
      </ng-container>
   
-    <!-- IsApproved Column -->
     <ng-container matColumnDef="isApproved">
       <th mat-header-cell *matHeaderCellDef> Approved </th>
       <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
     </ng-container> 
 
-     <!-- Reason Column -->
      <ng-container matColumnDef="reason">
       <th mat-header-cell *matHeaderCellDef> Reason </th>
       <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
     </ng-container> 
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsPrev"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsPrev;"></tr>
+
   </table>
 </div>
