table layouts done

--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="router-link-active" >
     <img src="assets/travelBig.png"class="img img-responsive logo"  />
-    <span>Vacation App</span>
+    <span>Vacation Tracker</span>
   </a>
   <button class="navbar-toggler" type="button" 
   data-toggle="collapse" data-target="#navbarColor01"
