--- a/src/app/vacations/vacations.component.css
+++ b/src/app/vacations/vacations.component.css
@@ -2,6 +2,11 @@
     width: 100%;
     margin-bottom: 50px;
 }
+.mat-table {
+    box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 
+                0 8px 10px 1px rgba(0,0,0,.14), 
+                0 3px 14px 2px rgba(0,0,0,.12)
+}
 .btnMargin {
     position: relative;
     margin-left: 15px;
@@ -12,4 +17,7 @@
 h3.dialogTitle {
     /* text-transform: capitalize; */
     font-weight: 500;
+}
+.red {
+    background-color: #607d8b !important
 }
