--- a/src/app/vacations/vacations.component.html
+++ b/src/app/vacations/vacations.component.html
@@ -42,7 +42,7 @@
       <th mat-header-cell *matHeaderCellDef> Cancellation </th>
       <td mat-cell *matCellDef="let element">
         <ng-container *ngIf="!element.isCancelled">
-          <button mat-raised-button (click)="openDialog(element)">Cancel Vacation</button>
+          <button mat-raised-button color="warn" (click)="openDialog(element)">Cancel Vacation</button>
         </ng-container>
         <span *ngIf="element.isCancelled">
           Cancelled!
@@ -51,7 +51,7 @@
     </ng-container> 
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'red' : row.isCancelled}" ></tr>
   </table>
 </div>
 
