--- a/src/app/vacations/vacations.component.html
+++ b/src/app/vacations/vacations.component.html
@@ -11,13 +11,13 @@
     <!-- StartDate Column -->
     <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef> Start Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.startDateFormatted}} </td>
     </ng-container>
   
     <!-- EndDate Column -->
     <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.endDateFormatted}} </td>
     </ng-container>
   
     <!-- DaysTaken Column -->
