--- a/src/app/vacations/vacations.component.html
+++ b/src/app/vacations/vacations.component.html
@@ -32,6 +32,12 @@
       <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
     </ng-container> 
 
+    <!-- IsApproved Column -->
+    <ng-container matColumnDef="approvedBy">
+        <th mat-header-cell *matHeaderCellDef> Approved By </th>
+        <td mat-cell *matCellDef="let element"> {{element.approvedBy}} </td>
+    </ng-container> 
+
     <!-- Reason Column -->
     <ng-container matColumnDef="reason">
       <th mat-header-cell *matHeaderCellDef> Reason </th>
@@ -65,12 +71,12 @@
   
      <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef> Start Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.startDateFormatted}} </td>
     </ng-container>
   
     <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.endDateFormatted}} </td>
     </ng-container>
   
      <ng-container matColumnDef="daysTaken">
@@ -81,6 +87,12 @@
     <ng-container matColumnDef="isApproved">
       <th mat-header-cell *matHeaderCellDef> Approved </th>
       <td mat-cell *matCellDef="let element"> {{element.isApproved}} </td>
+    </ng-container> 
+
+    <!-- IsApproved Column -->
+    <ng-container matColumnDef="approvedBy">
+        <th mat-header-cell *matHeaderCellDef> Approved By </th>
+        <td mat-cell *matCellDef="let element"> {{element.approvedBy}} </td>
     </ng-container> 
 
      <ng-container matColumnDef="reason">
