--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -21,6 +21,12 @@
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
       <li class="nav-item">
+          <a class="nav-link"[routerLink]="['/approvals']" *ngIf="username" 
+          matBadge="{{approvals}}" matBadgeColor="warn" matBadgePosition="after" >
+            Approvals
+          </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" (click)="logout()" *ngIf="username" >Logout</a>
       </li>
       <li class="nav-item pull" *ngIf="username">
