--- a/src/app/approvals/approvals-component/approvals-component.css
+++ b/src/app/approvals/approvals-component/approvals-component.css
@@ -2,3 +2,10 @@
     width: 100%;
     margin-bottom: 50px;
 }
+.btnSuccess {
+   background-color:  #76ff03;
+}
+.btnWarning {
+    margin-left: 15px;
+    background-color:  #f50057;
+ }
