--- a/src/app/approvals/approvals-component/approvals-component.html
+++ b/src/app/approvals/approvals-component/approvals-component.html
@@ -42,8 +42,8 @@
         <th mat-header-cell *matHeaderCellDef> Approval </th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="!element.isApproved">
-            <button mat-raised-button class="btnSuccess" (click)="openDialog(element)">Approve Vacation</button>
-            <button mat-raised-button class="btnWarning" (click)="openDialog(element)">Reject Vacation</button>
+            <button mat-raised-button class="btnSuccess" (click)="approveRejectVacation(element, true)">Approve Vacation</button>
+            <button mat-raised-button class="btnWarning" (click)="approveRejectVacation(element, false)">Reject Vacation</button>
           </ng-container>
           <span *ngIf="element.isApproved">
             Approved
