--- a/src/app/approvals/approvals-component/approvals-component.html
+++ b/src/app/approvals/approvals-component/approvals-component.html
@@ -19,6 +19,12 @@
         <th mat-header-cell *matHeaderCellDef> End Date </th>
         <td mat-cell *matCellDef="let element"> {{element.endDateFormatted}} </td>
       </ng-container>
+
+      <!-- Full Name of Requester -->
+      <ng-container matColumnDef="fullName">
+        <th mat-header-cell *matHeaderCellDef> Full Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
+      </ng-container> 
     
       <!-- DaysTaken Column -->
         <ng-container matColumnDef="daysTaken">
