--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,11 +30,19 @@
           <mat-datepicker touchUi #picker2 disabled="false"></mat-datepicker>
       </mat-form-field>
     </div>
+    <form [formGroup]="vacationCommentForm">
+      <mat-form-field class="example-full-width">
+          <textarea matInput [value]="''" formControlName="reason" placeholder="Vacation comment"></textarea>
+      </mat-form-field>
+    </form>
     <div class="row" *ngIf="vacationForm">
+      <!-- str {{vacationForm.value.startDate}}, 
+      startDate -> {{vacationForm.value.startDate === ''}}, endDate {{vacationForm.value.endDate === ''}},
+      length -> {{vacationForm.value.reason.length <= 3 }}, err -> {{this.errorMsg !== ''}} , days -> {{ user.daysLeft <= 0 }} -->
       <button mat-raised-button class="requestBtn" color="primary" matBadge="{{user.daysLeft}}" 
       matBadgePosition="after" matBadgeColor="accent" 
-      [disabled]="vacationForm.value.startDate === '' || vacationForm.value.endDate === ''
-                  || this.errorMsg !== '' || user.daysLeft <= 0">
+      [disabled]="vacationForm.value.startDate === '' || vacationForm.value.endDate === '' || 
+      (vacationCommentForm.value.reason.length < 3) || this.errorMsg !== '' || user.daysLeft <= 0">
         Request Vacation
       </button>
     </div>
