--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -20,12 +20,22 @@
       <li class="nav-item"  *ngIf="!username">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
-      <li class="nav-item" *ngIf="username && admin">
-          <a class="nav-link"[routerLink]="['/approvals']"
-          matBadge="{{approvals}}" matBadgeColor="warn" matBadgePosition="after" >
-            Approvals
+      <li class="nav-item" *ngIf="username">
+          <a class="nav-link" [routerLink]="['/vacations']" >
+            Vacations
           </a>
       </li>
+      <li class="nav-item" *ngIf="username && hr">
+          <a class="nav-link" [routerLink]="['/users']" >
+            HR Administration
+          </a>
+      </li>
+      <li class="nav-item" *ngIf="username && admin">
+        <a class="nav-link" [routerLink]="['/approvals']"
+        matBadge="{{approvals}}" matBadgeColor="warn" matBadgePosition="after" >
+          Approvals
+        </a>
+    </li>
       <li class="nav-item">
         <a class="nav-link" (click)="logout()" *ngIf="username" >Logout</a>
       </li>
