--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,46 @@
-<p>
-  users works!
-</p>
+<div class="users">
+
+  <h2>Users</h2>
+  <mat-form-field>
+    <input matInput name="search1" (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+    
+  <table mat-table [dataSource]="dataSource" class="usersTable">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    </ng-container>
+    
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef> Last Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="username">
+      <th mat-header-cell *matHeaderCellDef> Username* </th>
+      <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="age">
+      <th mat-header-cell *matHeaderCellDef> Age </th>
+      <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+    </ng-container> 
+
+    <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container> 
+
+     <ng-container matColumnDef="daysLeft">
+        <th mat-header-cell *matHeaderCellDef> Days Vacation </th>
+        <td mat-cell *matCellDef="let element"> {{element.daysLeft}} </td>
+    </ng-container> 
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'red' : row.isCancelled, 'approved' : row.isApproved && !row.isCancelled}" ></tr>
+  </table>
+
+</div>
