--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -35,8 +35,14 @@
     </ng-container> 
 
      <ng-container matColumnDef="daysLeft">
-        <th mat-header-cell *matHeaderCellDef> Days Vacation </th>
-        <td mat-cell *matCellDef="let element"> {{element.daysLeft}} </td>
+        <th mat-header-cell *matHeaderCellDef> Vacation Days </th>
+        <td mat-cell *matCellDef="let element"> 
+          <form [formGroup]="vacationDaysForm">
+            <mat-form-field class="example-full-width daysLeftField">
+                <input matInput type="number" [value]="element.daysLeft" (change)="valueChange($event, element)" formControlName="daysLeft" />
+            </mat-form-field>
+          </form>
+        </td>
     </ng-container> 
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
