--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,3 +15,7 @@ dialog-overview-example-dialog h3 {
 .mat-form-field-flex {
     width: 50px !important;
 }
+input.mat-input-element {
+    border-bottom: none!important;
+    box-shadow: none!important;
+}
