--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -14,16 +14,23 @@
       <li class="nav-item">
         <a class="nav-link"[routerLink]="['/home']" >Home</a>
       </li>
+      
       <li class="nav-item" *ngIf="!username" >
         <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
       <li class="nav-item"  *ngIf="!username">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
+
       <li class="nav-item" *ngIf="username">
           <a class="nav-link" [routerLink]="['/vacations']" >
             Vacations
           </a>
+      </li>
+      <li class="nav-item" *ngIf="username && hr">
+        <a class="nav-link" [routerLink]="['/team-calendar']" >
+          Calendar
+        </a>
       </li>
       <li class="nav-item" *ngIf="username && hr">
           <a class="nav-link" [routerLink]="['/users']" >
@@ -35,10 +42,12 @@
         matBadge="{{approvals}}" matBadgeColor="warn" matBadgePosition="after" >
           Approvals
         </a>
-    </li>
+      </li>
+
       <li class="nav-item">
         <a class="nav-link" (click)="logout()" *ngIf="username" >Logout</a>
       </li>
+
       <li class="nav-item pull" *ngIf="username">
           <a class="nav-link" id="notclick" >Welcome, {{username}}!</a>
       </li>
