Add routing handling and parse of dates

--- a/src/app/nav/nav-component/nav-component.component.html
+++ b/src/app/nav/nav-component/nav-component.component.html
@@ -27,7 +27,7 @@
             Vacations
           </a>
       </li>
-      <li class="nav-item" *ngIf="username && hr">
+      <li class="nav-item" *ngIf="username">
         <a class="nav-link" [routerLink]="['/team-calendar']" >
           Calendar
         </a>
