--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -70,9 +70,9 @@
   </div>
   <div class="form-group">
     <label for="color">Team Calendar Color</label>
-    <input name="color" class="form-control" [(colorPicker)]="model.color" [value]="model.color === '#F39347' ? 'Please select a color!' : model.color" (colorPickerSelect)="onColorChange($event)"
-
-      [style.background]="model.color"/>
+    <input name="color" class="form-control" [(colorPicker)]="model.color" 
+    [value]="model.color === '#F39347' ? 'Please select a color!' : model.color"
+    [style.background]="model.color"/>
   </div>
   <div class="form-group">
     <label for="email">Email Address</label>
