--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~ngx-toastr/toastr.css';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 
+.toast-top-center {  
+    top: 120px;
+}
 .requestBtn {
     margin-top: 36px !important;
     margin-left: 25px !important; 
